--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
- 
+
 storage/logs/laravel.log
-core/intent_list/
-core/model_list/
-core/deployment/
+/core/intent_list
+/core/model_list
+/core/deployment
